# israel-weather-rs

./: .aider.chat.history.md  .aider.input.history  .gitignore  Cargo.toml  README.md  barakplasma_israel-weather-rs.flo  isr_cities_1week_6hr_forecast.xml  ntfy-template.tmpl  weather.xml
.aider.tags.cache.v3/: cache.db
.devcontainer/: devcontainer.json
.github/workflows/: cross-compile.yml  e2e_test.yml  periodic_test.yml  release.yml  rust.yml  test.yml
barakplasma/: israel-weather-rs.flo
src/: ims_structs.rs  lib.rs  main.rs
