[package]
name = "weather"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached-path = "0.6"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"]}
serde-xml-rs = "0.6"
serde_json = "1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
openssl = { version = "0.10.62", features = ["vendored"] }

[target.'cfg(target_arch = "arm")'.dependencies]
openssl = { version = "0.10.62", features = ["vendored"] }
